Resolves: tdf#157786 Use GetFloor32() for date days instead of GetInt32()

Change-Id: I1d6242b516f4b23473151bb99cbdf1a057a15746
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158029
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit a5d263d3deca6315f9128bc785e9fb6cb2e697f1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158039
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>